# hump

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  README.md
.specify/memory/: constitution.md
specs/001-heads-up-nlhe-bots/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-heads-up-nlhe-bots/checklists/: requirements.md
specs/001-heads-up-nlhe-bots/contracts/: websocket-api.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  client.hpp  delay.cpp  delay.hpp  main.cpp  random_strategy.cpp  random_strategy.hpp  stack_management.cpp  stack_management.hpp
src/common/: CMakeLists.txt  constants.hpp  json_serialization.cpp  json_serialization.hpp  logging.cpp  logging.hpp  uuid.cpp  uuid.hpp
src/core/: CMakeLists.txt  betting_rules.cpp  betting_rules.hpp  card.cpp  card.hpp  deck.cpp  deck.hpp  hand.cpp  hand.hpp  hand_ranking.cpp  hand_ranking.hpp  pot.cpp  pot.hpp
src/core/models/: deck.hpp  hand.hpp  player.hpp  table.hpp
src/server/: CMakeLists.txt  connection_manager.cpp  connection_manager.hpp  game_session.cpp  game_session.hpp  main.cpp  player_action.cpp  player_action.hpp  player_removal.cpp  player_removal.hpp  player_state.cpp  player_state.hpp  server.cpp  server.hpp  table_manager.cpp  table_manager.hpp  websocket_session.cpp  websocket_session.hpp
tests/: CMakeLists.txt
tests/contract/: CMakeLists.txt  action_messages_test.cpp  hand_completed_test.cpp  hand_started_test.cpp  malformed_messages_test.cpp  welcome_test.cpp
tests/integration/: CMakeLists.txt  bot_behavior_test.cpp  chip_leak_test.cpp  disconnection_test.cpp  full_hand_test.cpp  performance_test.cpp  stability_test.cpp  websocket_connection_test.cpp
tests/unit/: CMakeLists.txt
tests/unit/client/: CMakeLists.txt  random_strategy_test.cpp  stack_management_test.cpp
tests/unit/common/: CMakeLists.txt  json_serialization_test.cpp
tests/unit/core/: CMakeLists.txt  betting_rules_test.cpp  deck_test.cpp  hand_ranking_test.cpp
tests/unit/edge_cases/: CMakeLists.txt  edge_cases_test.cpp
tests/unit/server/: CMakeLists.txt  disconnection_timer_test.cpp
